fix(web): change gap and padding in _services.css for responsive mode.

--- a/assets/styles/partials/_services.css
+++ b/assets/styles/partials/_services.css
@@ -28,8 +28,8 @@
   background-color: var(--color-emphasis-3);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
+  gap: 1.5rem;
+  padding: 1.5rem;
 }
 
 /* .card-service {
